// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar should have an \`is-indeterminate\` className if \`value\` is not provided 1`] = `
@keyframes animation-0 {
  0% {
    left: -50%;
  }

  100% {
    left: 100%;
  }
}

.emotion-0 {
  position: relative;
  overflow: hidden;
  width: 100%;
  height: 1.5px;
  background-color: #f0f0f0;
  border-radius: 2px;
}

.emotion-2 {
  display: inline-block;
  position: absolute;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: var(--wp-components-color-accent, var(--wp-admin-theme-color, #3858e9));
}

.is-indeterminate .emotion-2 {
  -webkit-animation-duration: 1.5s;
  animation-duration: 1.5s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
}

@media ( prefers-reduced-motion ) {
  .is-indeterminate .emotion-2 {
    -webkit-animation-duration: 0s;
    animation-duration: 0s;
  }
}

.emotion-4 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="components-progress-bar is-indeterminate emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      style="width: 50%;"
    />
    <progress
      aria-label="Loading …"
      class="emotion-4 emotion-5"
      max="100"
    />
  </div>
</div>
`;

exports[`ProgressBar should not have an \`is-indeterminate\` className if \`value\` is provided 1`] = `
@keyframes animation-0 {
  0% {
    left: -50%;
  }

  100% {
    left: 100%;
  }
}

.emotion-0 {
  position: relative;
  overflow: hidden;
  width: 100%;
  height: 1.5px;
  background-color: #f0f0f0;
  border-radius: 2px;
}

.emotion-2 {
  display: inline-block;
  position: absolute;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: var(--wp-components-color-accent, var(--wp-admin-theme-color, #3858e9));
}

.is-indeterminate .emotion-2 {
  -webkit-animation-duration: 1.5s;
  animation-duration: 1.5s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
}

@media ( prefers-reduced-motion ) {
  .is-indeterminate .emotion-2 {
    -webkit-animation-duration: 0s;
    animation-duration: 0s;
  }
}

.emotion-4 {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="components-progress-bar emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      style="width: 55%;"
    />
    <progress
      aria-label="Loading …"
      class="emotion-4 emotion-5"
      max="100"
      value="55"
    />
  </div>
</div>
`;
